# OSI-Autonomous-Institute

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: ORCHESTRATOR.md
docs/governance/: CONSTITUTION.md  ESCALATION-POLICY.md
docs/program/: PROGRAM_STATUS.md
docs/roadmap/: RELEASES.md
src/osi_orchestrator/: __init__.py  cli.py  contract_codec.py  contracts.py  governance.py  orchestrator.py  queue.py  routing.py  state_machine.py  storage.py
tests/: test_contracts.py  test_governance.py  test_orchestrator.py  test_queue.py  test_routing.py  test_state_machine.py  test_storage.py
