[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osi-orchestrator"
version = "0.1.0"
description = "Governed, persistent orchestrator kernel for autonomous institutional execution."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
osi = "osi_orchestrator.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["osi_orchestrator"]
